# TeachingEmbC

./: CMakeLists.txt  LICENSE  README.md
Test/: CMakeLists.txt  fff.h  test_app.cpp  test_autosar_hal.cpp  test_drv.cpp
docs/: index.html
docs/md/: 01_introduction.md  02_environment.md  02_testability.md  03_googletest_basics.md  03_port_adapter.md  04_fff_mock.md  04_googletest.md  05_solid_dip.md  06_environment.md  06_port_adapter.md  07_tdd_with_ai.md  08_glossary.md  12_autosar.md
src/: CMakeLists.txt
src/APP/INC/: add.h
src/APP/SRC/: add.c
src/DRV/INC/: sub.h
src/DRV/SRC/: drv1.c
src/app/: temp_monitor.c  temp_monitor.h  temperature.c  temperature.h
src/autosar/: Adc.c  Adc.h  Dio.c  Dio.h  Port.c  Port.h  Std_Types.h
src/before/: bad_temp.c  bad_temp.h
src/hal/: hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h
